--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,6 @@
 /* For information on how to create your own theme, please refer to:
 http://ionicframework.com/docs/theming/ */
+
+:root {
+  --ion-font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont;
+}
