--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,3 +4,9 @@ http://ionicframework.com/docs/theming/ */
 :root {
   --ion-font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont;
 }
+@media (prefers-color-scheme: dark) {
+  ion-card {
+    --background: #1e1e1e;
+    color: #fff;
+  }
+}
